fixed extra space on menu upon refresh on small screen screen size (#791)

--- a/src/App.less
+++ b/src/App.less
@@ -170,6 +170,7 @@ img {
 
 .headroom-wrapper {
 	z-index: 800;
+	height: fit-content!important;
 }
 
 .navbar-mini {
